# StrengthApproximate

./: CMakeLists.txt  Matrix.h  README.md  momentum.py  strength_approximate.cpp  strength_approximate.h
include/: Matrix.h  strength_approximate.h
src/: Matrix.cpp  strength_approximate.h
